kubernetes/apps/default/bookstack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstack
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - docs.gurzil.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bookstack
          port: 80
